# swagger_server/controllers/profile_controller.py
@@ -1,9 +1,10 @@
 import connexion
 import six
 
-from swagger_server.models.experiment import Experiment  # noqa: E501
+from swagger_server.models.profile import Profile  # noqa: E501
 from swagger_server import util
-
+from . import emulab
+import json
 
 def get_profile(username):  # noqa: E501
     """get profiles under user
@@ -13,6 +14,20 @@ def get_profile(username):  # noqa: E501
     :param username: username for the request
     :type username: str
 
-    :rtype: List[Experiment]
+    :rtype: List[Profile]
     """
-    return 'do some magic!'
+    emulab_cmd = '{} python ~/aerpaw/querydb.py {} list_profiles'.format(emulab.CMD_PREFIX, username)
+    emulab_stdout = emulab.send_request(emulab_cmd)
+    profiles = []
+    if emulab_stdout:
+        results = json.loads(emulab_stdout)
+        print(results)
+        for record in results:
+            for k in list(record):
+                if not getattr(Profile, k, None):
+                    print(k + ":" + str(record[k]) + " is ignored")
+                    del record[k]
+            profile = Profile(**record)
+            profiles.append(profile)
+
+    return profiles
