# swagger_server/models/profile.py
@@ -1,0 +1,222 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Profile(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, creator: str=None, name: str=None, project: str=None, version: str=None, created: str=None, repourl: str=None, script: str=None):  # noqa: E501
+        """Profile - a model defined in Swagger
+
+        :param creator: The creator of this Profile.  # noqa: E501
+        :type creator: str
+        :param name: The name of this Profile.  # noqa: E501
+        :type name: str
+        :param project: The project of this Profile.  # noqa: E501
+        :type project: str
+        :param version: The version of this Profile.  # noqa: E501
+        :type version: str
+        :param created: The created of this Profile.  # noqa: E501
+        :type created: str
+        :param repourl: The repourl of this Profile.  # noqa: E501
+        :type repourl: str
+        :param script: The script of this Profile.  # noqa: E501
+        :type script: str
+        """
+        self.swagger_types = {
+            'creator': str,
+            'name': str,
+            'project': str,
+            'version': str,
+            'created': str,
+            'repourl': str,
+            'script': str
+        }
+
+        self.attribute_map = {
+            'creator': 'creator',
+            'name': 'name',
+            'project': 'project',
+            'version': 'version',
+            'created': 'created',
+            'repourl': 'repourl',
+            'script': 'script'
+        }
+        self._creator = creator
+        self._name = name
+        self._project = project
+        self._version = version
+        self._created = created
+        self._repourl = repourl
+        self._script = script
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Profile':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Profile of this Profile.  # noqa: E501
+        :rtype: Profile
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def creator(self) -> str:
+        """Gets the creator of this Profile.
+
+
+        :return: The creator of this Profile.
+        :rtype: str
+        """
+        return self._creator
+
+    @creator.setter
+    def creator(self, creator: str):
+        """Sets the creator of this Profile.
+
+
+        :param creator: The creator of this Profile.
+        :type creator: str
+        """
+
+        self._creator = creator
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this Profile.
+
+
+        :return: The name of this Profile.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this Profile.
+
+
+        :param name: The name of this Profile.
+        :type name: str
+        """
+        if name is None:
+            raise ValueError("Invalid value for `name`, must not be `None`")  # noqa: E501
+
+        self._name = name
+
+    @property
+    def project(self) -> str:
+        """Gets the project of this Profile.
+
+
+        :return: The project of this Profile.
+        :rtype: str
+        """
+        return self._project
+
+    @project.setter
+    def project(self, project: str):
+        """Sets the project of this Profile.
+
+
+        :param project: The project of this Profile.
+        :type project: str
+        """
+        if project is None:
+            raise ValueError("Invalid value for `project`, must not be `None`")  # noqa: E501
+
+        self._project = project
+
+    @property
+    def version(self) -> str:
+        """Gets the version of this Profile.
+
+
+        :return: The version of this Profile.
+        :rtype: str
+        """
+        return self._version
+
+    @version.setter
+    def version(self, version: str):
+        """Sets the version of this Profile.
+
+
+        :param version: The version of this Profile.
+        :type version: str
+        """
+
+        self._version = version
+
+    @property
+    def created(self) -> str:
+        """Gets the created of this Profile.
+
+
+        :return: The created of this Profile.
+        :rtype: str
+        """
+        return self._created
+
+    @created.setter
+    def created(self, created: str):
+        """Sets the created of this Profile.
+
+
+        :param created: The created of this Profile.
+        :type created: str
+        """
+
+        self._created = created
+
+    @property
+    def repourl(self) -> str:
+        """Gets the repourl of this Profile.
+
+
+        :return: The repourl of this Profile.
+        :rtype: str
+        """
+        return self._repourl
+
+    @repourl.setter
+    def repourl(self, repourl: str):
+        """Sets the repourl of this Profile.
+
+
+        :param repourl: The repourl of this Profile.
+        :type repourl: str
+        """
+
+        self._repourl = repourl
+
+    @property
+    def script(self) -> str:
+        """Gets the script of this Profile.
+
+
+        :return: The script of this Profile.
+        :rtype: str
+        """
+        return self._script
+
+    @script.setter
+    def script(self, script: str):
+        """Sets the script of this Profile.
+
+
+        :param script: The script of this Profile.
+        :type script: str
+        """
+
+        self._script = script
